--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+:root {
+    --bg-color: rgb(241, 246, 252);
+}
+
 body {
-    width: 60vw;
-    align-content: center;
-    background-color:rgb(237, 242, 247, 0.5);
+    background-color: var(--bg-color);
 }
 
 .parallax {
@@ -23,11 +25,16 @@ body {
 header {
     position: sticky;
     top: 0rem;
+    background-color: var(--bg-color);
     z-index: 5;
 }
 
-hr {
-    height: 5rem;
+.hr_separador {
+    height: 4rem;
+}
+
+.featuresSection {
+    height: 3rem;
 }
 
 .nav_text {
@@ -86,18 +93,18 @@ hr {
 
 #blue_circle {
     width: 3rem;
-    top: 14rem;
+    top: 9rem;
     left: 4rem;
 }
 
 #white1_circle {
     width: 13rem;
-    top: 14rem;
+    top: 9rem;
     left: -5rem;
 }
 
 #white2_circle {
-    top: 9rem;
+    top: 5rem;
     width: 13rem;
     right: -5rem;
 }
@@ -222,6 +229,135 @@ li p {
     font-weight: lighter;
     font-size: 0.7rem;
     color: grey;
+}
+
+.checkmark {
+    list-style-image: url(/images/checkmark.png);
+}
+
+.dark_section {
+    background-color: rgb(221, 232, 243);
+}
+
+.calendar_skills {
+    display: flex;
+    align-items: center;
+    margin-left: 0.7rem;
+    margin-bottom: 1rem;
+    background-color: white;
+    padding: 0.6rem;
+    font-weight: 800;
+    height: 1.7rem;
+}
+
+.calendar_schedule {
+    background-color: rgb(159, 107, 215);
+}
+
+.calendar_schedule p {
+    color: white;
+}
+
+.calendar_skills p {
+    margin: 0;
+    margin-left: 0.2rem;
+}
+
+.box_organize {
+    width: 5.5rem;
+}
+
+#btn_privacy {
+    background-color: transparent;
+    border: 1px solid black;
+    color: black;
+}
+
+#btn_privacy:hover {
+    background-color: black;
+    color: white;
+    filter: drop-shadow(0 0 0.5rem black);
+}
+
+.img_stars {
+    width: 40%
+}
+
+.mid_line {
+    width: 2rem;
+}
+
+.test_text {
+    font-style: italic;
+}
+
+.test_name {
+    font-weight: bolder;
+    color: black;
+}
+
+.section_logos {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    background-color: white;
+}
+
+.img_logos1 {
+    grid-column: 1/3;
+}
+
+.img_logos2 {
+    grid-column: 3/5;
+}
+
+.img_logos3 {
+    grid-column: 5/7;
+}
+
+.img_logos4 {
+    grid-column: 2/4;
+}
+
+.img_logos5 {
+    grid-column: 4/6;
+}
+
+@media (max-width: 500px) {
+    .img_logos1 {
+        grid-column: 1/4;
+    }
+    
+    .img_logos2 {
+        grid-column: 4/7;
+    }
+    
+    .img_logos3 {
+        grid-column: 1/4;
+    }
+    
+    .img_logos4 {
+        grid-column: 4/7;
+    }
+    
+    .img_logos5 {
+        grid-column: 3/5;
+    }
+}
+
+.screens_icon {
+    width: 4rem;
+}
+
+.numbers_screens {
+    font-size: 3rem;
+}
+
+.text_views {
+    color: grey;
+    font-size: 0.6rem;
+    font-weight: 500;
 }
 
 footer {
