--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,14 @@ body {
     background-position-y: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
+}
 
 header {
     position: sticky;
     top: 0rem;
     background-color: var(--bg-color);
     z-index: 5;
+    filter: drop-shadow(0 0 0.2rem rgb(145, 145, 145));
 }
 
 .hr_separador {
@@ -82,6 +83,8 @@ header {
     color: white;
     filter: drop-shadow(0 0 0.5rem crimson);
 }
+
+/* PHONE SECTION */
 
 #green_diamond {
     width: 0.7rem;
@@ -179,6 +182,7 @@ li p {
 
 .li_icon1:hover {
     filter: drop-shadow(0 0 0.5rem rgb(159, 107, 215));
+    transform: scale(1.2);
 }
 
 .li_icon2 {
@@ -190,6 +194,7 @@ li p {
 
 .li_icon2:hover {
     filter: drop-shadow(0 0 0.5rem rgba(107, 215, 129));
+    transform: scale(1.2);
 }
 
 .li_icon3 {
@@ -201,6 +206,7 @@ li p {
 
 .li_icon3:hover {
     filter: drop-shadow(0 0 0.5rem rgba(227, 107, 107));
+    transform: scale(1.2);
 }
 
 .li_icon4 {
@@ -212,6 +218,7 @@ li p {
 
 .li_icon4:hover {
     filter: drop-shadow(0 0 0.5rem rgba(236, 223, 90));
+    transform: scale(1.2);
 }
 
 .li_icon5 {
@@ -223,7 +230,10 @@ li p {
 
 .li_icon5:hover {
     filter: drop-shadow(0 0 0.5rem rgba(100, 163, 218));
+    transform: scale(1.2);
 }
+
+/* SECTION DESCRIPTION */
 
 .text_list {
     font-weight: lighter;
@@ -248,6 +258,16 @@ li p {
     padding: 0.6rem;
     font-weight: 800;
     height: 1.7rem;
+}
+
+.calendar_skills:hover {
+    background-color: rgb(159, 107, 215);
+}
+.calendar_skills p:hover {
+    color: white;
+}
+.calendar_skills svg:hover {
+    color: white;
 }
 
 .calendar_schedule {
@@ -278,6 +298,25 @@ li p {
     color: white;
     filter: drop-shadow(0 0 0.5rem black);
 }
+
+.calendar_img:hover {
+    position: relative;
+    animation-name: example;
+    animation-duration: 8s;
+    animation-iteration-count: infinite;
+    transform: scale(1.2);
+    transition: 2s;
+}
+
+@keyframes example {
+    0%   {left:0rem; top:0rem;}
+    /* 25%  {right:10rem; top:10rem;} */
+    50%  {right:10rem; top:10rem;}
+    /* 75%  {left:0rem; top:10rem;} */
+    100% {left:0rem; top:0rem;}
+    }
+
+/* SECTION TESTIMONIALS */
 
 .img_stars {
     width: 40%
@@ -346,6 +385,8 @@ li p {
     }
 }
 
+/* SECTION SCREENS */
+
 .screens_icon {
     width: 4rem;
 }
@@ -360,6 +401,37 @@ li p {
     font-weight: 500;
 }
 
-footer {
-    height: 500px;
+.screens_container:hover {
+    transform: scale(1.5);
+    margin: 2rem;
+}
+
+#phone_anima {
+    transition: 2s;
+}
+
+#phone_anima:hover {
+    transform: scale(1.2);
+  }
+
+/* FOOTER */
+
+h3 {
+    font-weight: 800;
+    font-size: 0.8rem;
+    color: rgb(152, 152, 152);
+}
+
+footer a {
+    text-decoration: none;
+    font-size: 0.6rem;
+    color: grey;
+}
+
+.icon_footer {
+    width: 0.8rem;
+}
+
+.logos_footer {
+    width: 2.5rem;
 }
