--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,17 @@ body {
     background-size: cover;
 }
 
+.row {
+    margin-right: 0;
+    margin-left: 0;
+}
+
 header {
     position: sticky;
     top: 0rem;
     background-color: var(--bg-color);
     z-index: 5;
-    filter: drop-shadow(0 0 0.2rem rgb(145, 145, 145));
+    /* filter: drop-shadow(0 0 0.2rem rgb(145, 145, 145)); */
 }
 
 .hr_separador {
@@ -294,7 +299,6 @@ li p {
 
 .calendar_skills p {
     margin: 0;
-    margin-left: 0.2rem;
 }
 
 .box_organize {
@@ -313,7 +317,7 @@ li p {
     filter: drop-shadow(0 0 0.5rem black);
 }
 
-.calendar_img:hover {
+/* .calendar_img:hover {
     position: relative;
     animation-name: example;
     animation-duration: 8s;
@@ -326,10 +330,10 @@ li p {
 @keyframes example {
     0%   {left:0rem; top:0rem;}
     /* 25%  {right:10rem; top:10rem;} */
-    50%  {right:10rem; top:10rem;}
+    /* 50%  {right:10rem; top:10rem;}
     /* 75%  {left:0rem; top:10rem;} */
-    100% {left:0rem; top:0rem;}
-    }
+    /* 100% {left:0rem; top:0rem;}
+    } */
 
 /* SECTION TESTIMONIALS */
 
@@ -379,24 +383,33 @@ li p {
 }
 
 @media (max-width: 500px) {
+    .section_logos {
+        display: grid;
+        grid-template-columns: repeat(11, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        justify-items: center;
+        background-color: white;
+        margin-left: 0.2rem;
+        margin-right: 0.8rem;
+    }
     .img_logos1 {
-        grid-column: 1/4;
+        grid-column: 1/6;
     }
     
     .img_logos2 {
-        grid-column: 4/7;
+        grid-column: 7/12;
     }
     
     .img_logos3 {
-        grid-column: 1/4;
+        grid-column: 1/6;
     }
     
     .img_logos4 {
-        grid-column: 4/7;
+        grid-column: 7/12;
     }
     
     .img_logos5 {
-        grid-column: 3/5;
+        grid-column: 4/10;
     }
 }
 
